dataset1235/2025-2/2318198438/users/1240871306/executions/3334494446_2403290319.log
== SUBMISSION (2025-08-28 00:27:33)
-- CODE: 
preco = int(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:19:05)
-- CODE: 
preco = float((input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:03)
-- CODE: 
preco = float((input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:25:06)
-- CODE: 
preco = int(input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:25:07)
-- CODE: 
preco = int(input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:30:46)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:27:32)
-- CODE: 
preco = int(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:25:30)
-- CODE: 
preco = int(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:25:28)
-- CODE: 
preco = int(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:20:16)
-- CODE: 
preco = float((input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:23:44)
-- CODE: 
preco = int(input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:23:43)
-- CODE: 
preco = int(input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = int(input))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:02)
-- CODE: 
preco = float((input))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float((input))
            ^^^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:17:54)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
